core/app/assets/stylesheets/glass/config/_base.scss
/* -------------------- MAIN -------------------- */

html, body {
  overflow: auto !important; 
  min-height: 100% 
}

body {
  overflow-x: hidden;
	font-family: $primary-font;
}

a {
	@include transition($transition);
}

a:link, a:visited {
	color: $primary-color;
}

a:hover, a:focus {
	color: $primary-hover;
	text-decoration: none;
}

a:focus {
  outline: 0 !important;
}

a:active {
	color: $primary-hover;
}

.bump-up {
  top: -1px;
}

.bump-up-2 {
  top: -2px;
}

.bump-right {
  left: 1px;
}

.bump-down {
  top: 1px;
}

.bump-down-2 {
  top: 2px;
}

.bump-left {
  left: -1px;
}

.transitionable {
  transition: .2s ease-out;
}

.rotate-45 {
  transform: rotate(45deg);
}

.rotate-90 {
  transform: rotate(90deg);
}

.rotate-180 {
  transform: rotate(180deg);
}


/* -------------------- LAYOUT -------------------- */

.clear:before, .clear:after {
    content: " ";
    display: table;
}

.clear:after {
    clear: both;
}

.list-flex {
  display: flex;
  li {
    flex: 1;
  }
}

.flex {
  display: flex;
}

.flex-1 {
  flex: 1;
}

@media (max-width: 991px) {
  .no-flex-sm {
    display: block !important;
  }
}

@media (max-width: 767px) {
  .no-flex-xs {
    display: block !important;
  }
}

.align-items-center {
  align-items: center;
}

.vertical-align {
  display: flex;
  align-items: center;
  height: 100%;
}

.horizontal-align {
  display: flex;
  justify-content: space-around;
}

.space-around {
  justify-content: space-around;
}

.space-between {
  justify-content: space-between;
}

.block {
  display: block;
}

.inline-block {
	display: inline-block;
}

.centered {
  margin-left: auto;
  margin-right: auto;
}

.static {
  position: static;
}

.inner-wrapper {
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
}

.card-index {
  display: flex;
  margin-left: -15px;
  margin-right: -15px;
  flex-wrap: wrap;
  justify-content: center;
  .card {
    flex: 1 1 300px;
    margin: 0 15px 30px;
    @media (min-width: 768px) {
      max-width: calc(50% - 15px);
    }
    .card-top {
      padding-top: 60%;
      display: block;
      color: $grey-6;
      .inner-wrapper {
        display: flex;
        align-items: center;
        justify-content: center;
        text-align: center;
        .feature-icon {
          font-size: 120px;
        }
      }
      &.inverted {
        color: $white;
      }
    }
    a.card-top {
      .inner-wrapper {
        opacity: 1;
        transition: .2s ease-out;
      }
      &:hover {
        .inner-wrapper {
          opacity: .8;
        }
      }
    }
    .card-content {
      padding: 30px;
    }
    &.no-bg {
      padding: 0 15px 30px;
    }
  }
}

* {
  background-repeat: no-repeat;
  position: relative;
}

*::selection {
	background: $primary-light; /* Safari */
	color: $white;
}

p::-moz-selection {
	background: $primary-light; /* Firefox */
	color: $white;
}

.margin-bottom-none {
  margin-bottom: 0;
}

.margin-bottom-xxs {
  margin-bottom: 10px !important;
}

.margin-bottom-xs {
  margin-bottom: $margin-half;
}

.margin-bottom-sm {
  margin-bottom: $margin;
}

.margin-bottom-md {
  margin-bottom: $margin * 1.5;
}

.margin-bottom {
  margin-bottom: $margin-double;
}

.margin-bottom-lg {
  margin-bottom: $margin * 3;
}

.margin-bottom-xl {
  margin-bottom: $margin * 4;
}

.margin-top-none {
  margin-top: 0;
}

.margin-top-xxs {
  margin-top: 10px !important;
}

.margin-top-xs {
  margin-top: $margin-half;
}

.margin-top-sm {
  margin-top: $margin;
}

.margin-top-md {
  margin-top: $margin * 1.5;
}

.margin-top {
  margin-top: $margin-double;
}

.margin-top-lg {
  margin-top: $margin * 3;
}

.margin-top-xl {
  margin-top: $margin * 4;
}

.margin-right-none {
  margin-right: 0;
}

.margin-right-xxs {
  margin-right: 10px !important;
}

.margin-right-xs {
  margin-right: $margin-half;
}

.margin-right-sm {
  margin-right: $margin;
}

.margin-right-md {
  margin-right: $margin * 1.5;
}

.margin-right {
  margin-right: $margin-double;
}

.margin-right-lg {
  margin-right: $margin * 3;
}

.margin-right-xl {
  margin-right: $margin * 4;
}

.margin-left-none {
  margin-left: 0;
}

.margin-left-xxs {
  margin-left: 10px !important;
}

.margin-left-xs {
  margin-left: $margin-half;
}

.margin-left-sm {
  margin-left: $margin;
}

.margin-left-md {
  margin-left: $margin * 1.5;
}

.margin-left {
  margin-left: $margin-double;
}

.margin-left-lg {
  margin-left: $margin * 3;
}

.margin-left-xl {
  margin-left: $margin * 4;
}

.flip-wrapper {
  &:hover {
    .flip-front {
      transform: rotateY(180deg);
    }
    .flip-back {
      transform: rotateY(360deg);
    }
  }
  .flip {
    position: absolute;
    backface-visibility: hidden;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    transition: .5s ease-out;
    &-front {
      z-index: 10;
    }
    &-back {
    -webkit-transform: rotateY(180deg);
    }
  }
}

.no-scroll {
  /* position: fixed !important; */
  /* width: 100%; */
  overflow: hidden !important;
}

.no-border {
  border: none !important;
}

.border-radius {
  border-radius: $radius;
}

.border-radius-double {
  border-radius: $radius-double;
}

.pseudo-hidden-field, .image-id-field {
	opacity: 0;
	height: 0px;
	width: 0px;
}



/* -------------------- ELEMENTS -------------------- */

.section {
	padding-top: $margin;
	padding-bottom: $margin;
}

.cover {
	color: $white;
	h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6 {
		color: $white;
	}
}

.circle {
  border-radius: 50%;
  width: 30px;
  height: 30px;
  display: block;
  background: $grey-5;
  @include transition($transition);
}

.icon-stack {
  .circle {
    position: absolute;
    top: 0;
  }
  .icon-stack-1x {
    top: -1px;
    left: -6px;
    font-size: 14px;
  }
}

.quote-wrapper {
  padding-left: 15px;
  padding-right: 15px;
}

.note {
  font-style: italic;
  color: $primary-color;
}

.image-link {
  background: $grey-5;
  display: block;
  &:hover img {
    opacity: .8;
  }
}

.image-link img {
  @include transition($transition);
}
/* ... */

